# component-template

./: .env.example  .gitignore  CLAUDE.md  Makefile  README.md  package.json  pyproject.toml  railway.json
.claude/: settings.json
migrations/: env.py
src/api/: server.py
src/database/: connection.py
src/observability/: errors.py  logging.py  usage_metrics.py
src/pipelines/: interface.py
src/types/: models.py
src/workflows/: inngest_client.py
tests/: conftest.py  test_component_contract.py
